<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridView
        android:id="@+id/widget_grid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:numColumns="4" />

    <!-- Empty view for the list -->
    <LinearLayout
        android:id="@+id/widget_empty_view"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/no_books_image"
            android:layout_width="@dimen/empty_view_image_width"
            android:layout_height="@dimen/empty_view_image_height"
            android:contentDescription="@string/empty_view_content_description"
            android:src="@drawable/no_results_found" />

        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/empty_view_title_text"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/empty_view_subtitle_text"
            android:textAlignment="center" />
    </LinearLayout>
</RelativeLayout>